@@ -1,5 +1,9 @@
 2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* GdbBacktrace.cs: Added support for code completion.
+
+2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* GdbBacktrace.cs: Track api changes.
 	* GdbSession.cs: Clean temporary variables.
 
